docs/Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    component: kubelet
    tier: control-plane
  name: kubelet
  namespace: kube-systems
spec:
  containers:
  - command:
    - kubelet
    - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,
    - --read-only-port=1
    image: gcr.io/google_containers/kubelet-amd64:v1.6.0
    name: gcr
