docs/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: developer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    alias-snippet: |
      location ^~ "/test" {
        default_type 'text/plain';
       alias /var/run;
      }
    all-snippet: |
      location / {
        return 200 'OK';
      }
    lua-snippet: |
      lua_package_path  "/etc/nginx/lua/?.lua;;";
      location / {
        return 200 'OK';
      }
spec:
  rules:
  - http:
      paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 8080
